@@ -83,7 +83,7 @@ Group0:1.Group2:2 Group0:1.Group2:3
 1
 
 # List of NUMA Nodes in a range of Cores (again)
-2,3
+NUMANode:2,NUMANode:3
 
 # Hierarchical spec for a range of PUs
 Group0:0.PU:2 Group0:0.PU:3
@@ -146,10 +146,10 @@ PU:22_PU:23_Core:6_Core:7_Group0:2
 3,4,5,6
 
 # 2 local nodes larger or equal to a Package (node:2@Package + node:6@Machine), with space separator
-2 6
+NUMANode:2 NUMANode:6
 
 # Best-locality local node near a PU (node:1@Die)
-1
+NUMANode:1
 
 # Best-capacity local node near a PU (node:6@Machine)
 6
